--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -3,30 +3,41 @@
     android:orientation="horizontal"
     android:padding="12dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical">
 
-    <CheckBox
-        android:id="@+id/cbSelect"
+    <!-- Radio button chọn địa chỉ -->
+    <androidx.appcompat.widget.AppCompatRadioButton
+        android:id="@+id/radioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <!-- Thông tin người nhận -->
     <LinearLayout
         android:orientation="vertical"
-        android:paddingStart="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_marginStart="12dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <TextView
-            android:id="@+id/tvName"
+            android:id="@+id/txtName"
             android:textStyle="bold"
             android:textSize="16sp"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/tvAddress"
+            android:id="@+id/txtPhone"
+            android:textSize="14sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+            android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/txtAddress"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
