--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -79,7 +79,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="kangshiray"
+                    android:text="username"
                     android:textStyle="bold"
                     android:textColor="#000000"
                     android:textSize="18sp" />
@@ -156,30 +156,6 @@
                 android:layout_height="1dp"
                 android:background="#E0E0E0" />
 
-
-            <!-- Language -->
-            <LinearLayout
-                android:id="@+id/rowLanguage"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:paddingHorizontal="16dp">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Language"
-                    android:textColor="#000000"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/arrow_forward"
-                    app:tint="#C0C0C0" />
-            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
