--- a/app/src/main/res/layout/activity_new_address.xml
+++ b/app/src/main/res/layout/activity_new_address.xml
@@ -76,7 +76,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tỉnh/Thành phố, Phường/Xã"
+                android:text="Tòa nhà/Số nhà,  Phường/Xã"
                 android:textStyle="bold"
                 android:layout_marginTop="20dp"/>
 
@@ -91,7 +91,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tên đường, Tòa nhà, Số nhà"
+                android:text="Tỉnh/Thành phố"
                 android:textStyle="bold"
                 android:layout_marginTop="20dp"/>
 
